# pmsm-map-ml-toolkit

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements-ml.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DATA_SCHEMA.md  PIPELINE_BOUNDARY.md  PUBLIC_REPOSITORY_USAGE_GUIDE.md  REPOSITORY_GOVERNANCE.md  SIGN_CONVENTIONS.md  TEAM_WORKFLOW.md
examples/: truth_map_example.csv
schemas/: truth_map_v1.schema.json
scripts/: bootstrap_windows.ps1
src/pmsm_map_ml/: __init__.py  export.py  nn.py  nn_common.py  optimization.py  provenance.py  pruning.py  quantization.py  schema.py  transforms.py  validation.py  visualization.py
tests/: test_pruning.py  test_transforms.py  test_validation.py
