[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pmsm-map-ml-toolkit"
version = "0.1.0"
description = "Solver-independent PMSM truth-map validation, visualization, MTPA/MTPV and TinyML tools"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Balaji S"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "scipy>=1.11,<2",
  "matplotlib>=3.8,<4"
]

[project.optional-dependencies]
ml = ["scikit-learn>=1.4,<2"]
dev = ["pytest>=8,<10", "ruff>=0.6,<1", "build>=1.2,<2"]

[project.scripts]
pmsm-map-validate = "pmsm_map_ml.validation:main"
pmsm-map-visualize = "pmsm_map_ml.visualization:main"
pmsm-map-optimize = "pmsm_map_ml.optimization:main"
pmsm-nn-train = "pmsm_map_ml.nn:main"
pmsm-nn-prune = "pmsm_map_ml.pruning:main"
pmsm-nn-quantize = "pmsm_map_ml.quantization:main"
pmsm-nn-export = "pmsm_map_ml.export:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
